--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb": "^18.0.1",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -12,8 +14,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1",
-    "redux": "^4.0.4",
-    "redux-devtools": "^3.5.0"
+    "redux": "4.0.4",
+    "redux-devtools": "^3.5.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
