--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {},
+  "resolutions": {
+    "eslint": "^6.7.1"
   }
 }
