--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "classnames": "^2.2.6",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "harmony-reflect": "^1.6.1",
     "lodash": "^4.17.15",
+    "prettier": "^1.19.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
