full_reduxed_axiosed_eslinted

--- a/todos.yml
+++ b/todos.yml
@@ -20,4 +20,4 @@ TODOs:
 14) создать ветку без debounce и с кнопкой поиска
 !++ 15) getIsDataFetched -> getIsFetched
 !++ 16) constants -> rename index.js
-17) Проверка ESLint - ubuntu
+!++ 17) Проверка ESLint - ubuntu
