local_warning_eslint

--- a/todos.yml
+++ b/todos.yml
@@ -21,3 +21,4 @@ TODOs:
 !++ 15) getIsDataFetched -> getIsFetched
 !++ 16) constants -> rename index.js
 !++ 17) Проверка ESLint - ubuntu
+18) ESLint -> TODO
