table_scroll_in_tbody_and_bugfix

--- a/todos.yml
+++ b/todos.yml
@@ -22,9 +22,10 @@ TODOs:
 !++ 16) constants -> rename index.js
 !++ 17) Проверка ESLint - ubuntu
 !++ 18) ESLint -> TODO
-- 19) scroll таблицы
+!++ 19) scroll таблицы
 !++ 20) убрать кнопку загрузка...
 !++ 21) layout (table) - fixed
 !++ 22) sort -> desc
 !++ 23) constants
 !++ 24) userParamsMapping
+!++ 25) fix scroll
